메인페이지 메뉴토글 적용, 레이아웃 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Jua&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/mainpage.css">
-    <script src="javascript/menubar.js"></script>
+    <link rel="stylesheet" href="/css/mainpage.css">
+    <script src="/javascript/menubar.js"></script>
 </head>
 
 <body>
