--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1일 1알고리즘</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Jua&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
 <body>
 <div id="menuButton" class="menu-button">☰ 메뉴</div>
 <div id="sidebar" class="sidebar">
-    <div class="user-id">사용자ID</div>
+    <div class="user-id"><a href="/login">로그인</a></div>
     <input type="text" placeholder="Search Algorithm.." class="search-box" />
     <a href="#">마이페이지</a>
     <a href="#">회원정보 수정</a>
@@ -23,8 +24,6 @@
 </div>
 
 <header>
-    <div><a href="#">로그인</a></div>
-    <div><a href="#">회원가입</a></div><br>
     <div>1일 1알고리즘</div>
 </header>
 
@@ -36,41 +35,66 @@
     <a href="#">완전탐색</a>
     <a href="#">그리디</a>
     <a href="#">동적계획법</a>
-    <a href="#">DFS / BFS</a>
+    <a href="#">DFS/BFS</a>
     <a href="#">이분탐색</a>
     <a href="#">그래프</a>
 </nav>
 
 <main>
     <div class="content">
-        <a href="#" class="content-title">제목</a>
-        <span class="content-user">사용자아이디</span>
-        <p class="content-part">파트</p>
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
     </div>
     <div class="content">
-        <a href="#" class="content-title">제목</a>
-        <span class="content-user">사용자아이디</span>
-        <p class="content-part">파트</p>
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
     </div>
     <div class="content">
-        <a href="#" class="content-title">제목</a>
-        <span class="content-user">사용자아이디</span>
-        <p class="content-part">파트</p>
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
     </div>
     <div class="content">
-        <a href="#" class="content-title">제목</a>
-        <span class="content-user">사용자아이디</span>
-        <p class="content-part">파트</p>
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
     </div>
     <div class="content">
-        <a href="#" class="content-title">제목</a>
-        <span class="content-user">사용자아이디</span>
-        <p class="content-part">파트</p>
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
+    </div>
+    <div class="content">
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
+    </div>
+    <div class="content">
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
+    </div>
+    <div class="content">
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
+    </div>
+    <div class="content">
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
+    </div>
+    <div class="content">
+        <a href="#" class="content-title">백준 105번</a>
+        <span class="content-user">kjh1234</span>
+        <p class="content-part">DFS / BFS</p>
     </div>
 </main>
 
 <footer>
-    <div>Footer</div>
+    <div>2019136007 고진혁</div>
 </footer>
 
 </body>
