--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
     <a href="#">마이페이지</a>
     <a href="#">회원정보 수정</a>
     <a href="#">AI에게 질문</a>
-    <a href="#">로그아웃</a>
+    <a href="#" th:href="@{/logout}">로그아웃</a>
 </div>
 
 <header>
