회원가입 폼 추가, 회원가입 기능 추가, 회원가입 시 필드오류 글로벌 오류 처리

--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -56,11 +56,11 @@
             <input type="submit" value="로그인" class="submit-box">
         </div>
     </form>
-    <a href="#" class="new-user">회원가입</a>
+    <a href="/add" th:href="@{/add}" class="new-user">회원가입</a>
 </main>
 
 <footer>
-    <div>2019136007 고진혁</div>
+    <div>footer</div>
 </footer>
 
 <script>
