글쓰기 폼 추가, 자신이 푼 알고리즘 공부 내용 입력 및 저장

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,7 @@
         <span th:text="${loginUser.loginId}">사용자 아이디</span>
     </div>
     <input type="text" name="search" placeholder="Search Algorithm.." class="search-box">
+    <a href="#" th:href="@{/board-form}">글쓰기</a>
     <a href="#">마이페이지</a>
     <a href="#">회원정보 수정</a>
     <a href="#">AI에게 질문</a>
