--- a/src/main/resources/templates/add/addForm.html
+++ b/src/main/resources/templates/add/addForm.html
@@ -16,10 +16,11 @@
 <div id="sidebar" class="sidebar">
   <a href="/login">로그인</a>
   <input type="text" name="search" placeholder="Search Algorithm.." class="search-box" />
+  <a href="#" th:href="@{/board-form}">글쓰기</a>
   <a href="#">마이페이지</a>
   <a href="#">회원정보 수정</a>
   <a href="#">AI에게 질문</a>
-  <a href="#">로그아웃</a>
+  <a href="#" th:href="@{/logout}">로그아웃</a>
 </div>
 
 <header>
