메뉴별 링크 추가, 글쓰기 폼 메뉴선택 콤보박스로 변경

--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -14,8 +14,8 @@
 <body>
 <div id="menuButton" class="menu-button">☰ 메뉴</div>
 <div id="sidebar" class="sidebar">
-  <div class="user-id" id="userId" th:data-login-id="${session.loginUser.loginId}">
-    <span th:text="${session.loginUser.loginId}">사용자 아이디</span>
+  <div class="user-id">
+    <a href="/login">로그인</a>
   </div>
   <form action="#" th:action="@{/search}" method="get">
     <input type="text" name="title" placeholder="Search Algorithm.." class="search-box">
@@ -45,7 +45,56 @@
 </nav>
 
 <main>
-
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
+  <div class="content">
+    <a href="#" class="content-title">백준 105번</a>
+    <span class="content-user">kjh1234</span>
+    <p class="content-part">DFS / BFS</p>
+  </div>
 </main>
 
 <footer>
