--- a/src/main/resources/templates/add/addForm.html
+++ b/src/main/resources/templates/add/addForm.html
@@ -15,9 +15,11 @@
 <div id="menuButton" class="menu-button">☰ 메뉴</div>
 <div id="sidebar" class="sidebar">
   <a href="/login">로그인</a>
-  <input type="text" name="search" placeholder="Search Algorithm.." class="search-box" />
+  <form action="#" th:action="@{/search}" method="get">
+    <input type="text" name="title" placeholder="Search Algorithm.." class="search-box">
+  </form>
   <a href="#" th:href="@{/board-form}">글쓰기</a>
-  <a href="#">마이페이지</a>
+  <a href="#" th:href="@{/myPage}">마이페이지</a>
   <a href="#">회원정보 수정</a>
   <a href="#">AI에게 질문</a>
   <a href="#" th:href="@{/logout}">로그아웃</a>
@@ -28,16 +30,16 @@
 </header>
 
 <nav>
-  <a href="#">해시</a>
-  <a href="#">스택 / 큐</a>
-  <a href="#">힙</a>
-  <a href="#">정렬</a>
-  <a href="#">완전탐색</a>
-  <a href="#">그리디</a>
-  <a href="#">동적계획법</a>
-  <a href="#">DFS/BFS</a>
-  <a href="#">이분탐색</a>
-  <a href="#">그래프</a>
+  <a href="#" th:href="@{|/menu/Hash|}">해시</a>
+  <a href="#" th:href="@{|/menu/Stack-Queue|}">스택 / 큐</a>
+  <a href="#" th:href="@{|/menu/Heap|}">힙</a>
+  <a href="#" th:href="@{|/menu/Sort|}">정렬</a>
+  <a href="#" th:href="@{|/menu/Exhaustive|}">완전탐색</a>
+  <a href="#" th:href="@{|/menu/Greedy|}">그리디</a>
+  <a href="#" th:href="@{|/menu/Dynamic-Programming|}">동적계획법</a>
+  <a href="#" th:href="@{|/menu/DFS-BFS|}">DFS/BFS</a>
+  <a href="#" th:href="@{|/menu/Binary-Search|}">이분탐색</a>
+  <a href="#" th:href="@{|/menu/Graph|}">그래프</a>
 </nav>
 
 <main style="text-align: center;">
