--- a/src/main/resources/templates/board/boardForm.html
+++ b/src/main/resources/templates/board/boardForm.html
@@ -14,12 +14,14 @@
 <body>
 <div id="menuButton" class="menu-button">☰ 메뉴</div>
 <div id="sidebar" class="sidebar">
-  <div class="user-id" id="userId" th:data-login-id="${loginUser.loginId}">
-    <span th:text="${loginUser.loginId}">사용자 아이디</span>
+  <div class="user-id" id="userId" th:data-login-id="${session.loginUser.loginId}">
+    <span th:text="${session.loginUser.loginId}">사용자 아이디</span>
   </div>
-  <input type="text" name="search" placeholder="Search Algorithm.." class="search-box" />
+  <form action="#" th:action="@{/search}" method="get">
+    <input type="text" name="title" placeholder="Search Algorithm.." class="search-box">
+  </form>
   <a href="#" th:href="@{/board-form}">글쓰기</a>
-  <a href="#">마이페이지</a>
+  <a href="#" th:href="@{/myPage}">마이페이지</a>
   <a href="#">회원정보 수정</a>
   <a href="#">AI에게 질문</a>
   <a href="#" th:href="@{/logout}">로그아웃</a>
@@ -30,23 +32,34 @@
 </header>
 
 <nav>
-  <a href="#">해시</a>
-  <a href="#">스택 / 큐</a>
-  <a href="#">힙</a>
-  <a href="#">정렬</a>
-  <a href="#">완전탐색</a>
-  <a href="#">그리디</a>
-  <a href="#">동적계획법</a>
-  <a href="#">DFS/BFS</a>
-  <a href="#">이분탐색</a>
-  <a href="#">그래프</a>
+  <a href="#" th:href="@{|/menu/Hash|}">해시</a>
+  <a href="#" th:href="@{|/menu/Stack-Queue|}">스택 / 큐</a>
+  <a href="#" th:href="@{|/menu/Heap|}">힙</a>
+  <a href="#" th:href="@{|/menu/Sort|}">정렬</a>
+  <a href="#" th:href="@{|/menu/Exhaustive|}">완전탐색</a>
+  <a href="#" th:href="@{|/menu/Greedy|}">그리디</a>
+  <a href="#" th:href="@{|/menu/Dynamic-Programming|}">동적계획법</a>
+  <a href="#" th:href="@{|/menu/DFS-BFS|}">DFS/BFS</a>
+  <a href="#" th:href="@{|/menu/Binary-Search|}">이분탐색</a>
+  <a href="#" th:href="@{|/menu/Graph|}">그래프</a>
 </nav>
 
 <main>
   <div class="blog-post">
     <input type="text" id="blogTitle" name="title" placeholder="문제 제목 입력.." class="blog-title-input" />
     <hr>
-    <input type="text" id="blogPart" name="part" placeholder="문제 입력.." class="part-input" />
+    <select id="blogPart" name="part" class="part-input">
+      <option value="Hash">해시</option>
+      <option value="Stack-Queue">스택 / 큐</option>
+      <option value="Heap">힙</option>
+      <option value="Sort">정렬</option>
+      <option value="Exhaustive">완전탐색</option>
+      <option value="Greedy">그리디</option>
+      <option value="Dynamic-Programming">동적계획법</option>
+      <option value="DFS-BFS">DFS/BFS</option>
+      <option value="Binary-Search">이분탐색</option>
+      <option value="Graph">그래프</option>
+    </select>
     <hr>
     <div class="editor-menu">
       <button id="btn-bold">
