--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,16 +15,18 @@
 <div id="menuButton" class="menu-button">☰ 메뉴</div>
 <div id="sidebar" class="sidebar">
     <!-- 로그인 되지 않았을 때 -->
-    <div class="user-id" th:if="${!isLoggedIn}">
+    <div class="user-id" th:if="${isLoggedIn}">
         <a href="/login">로그인</a>
     </div>
     <!-- 로그인 되었을 때 -->
     <div class="user-id" th:if="${isLoggedIn}">
         <span th:text="${loginUser.loginId}">사용자 아이디</span>
     </div>
-    <input type="text" name="search" placeholder="Search Algorithm.." class="search-box">
+    <form action="#" th:action="@{/search}" method="get">
+        <input type="text" name="title" placeholder="Search Algorithm.." class="search-box">
+    </form>
     <a href="#" th:href="@{/board-form}">글쓰기</a>
-    <a href="#">마이페이지</a>
+    <a href="#" th:href="@{/myPage}">마이페이지</a>
     <a href="#">회원정보 수정</a>
     <a href="#">AI에게 질문</a>
     <a href="#" th:href="@{/logout}">로그아웃</a>
