--- a/src/main/resources/templates/page/myPage.html
+++ b/src/main/resources/templates/page/myPage.html
@@ -45,7 +45,11 @@
 </nav>
 
 <main>
-
+  <div class="content" th:each="board : ${board}">
+    <a href="#" th:href="@{|/board/${board.id}|}" class="content-title" th:text="${board.title}">백준 105번</a>
+    <span class="content-user" th:text="${board.loginId}">kjh1234</span>
+    <p class="content-part" th:text="${board.part}">DFS / BFS</p>
+  </div>
 </main>
 
 <footer>
