--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -52,6 +52,21 @@
         <hr>
         <div id="editable-content" class="editable-content" th:utext="${board.content}">내용</div>
     </div>
+    <div class="comments" th:if="${comments != null}">
+        <h3>댓글</h3>
+        <ul>
+            <li th:each="comment : ${comments}">
+                <div><span th:text="${comment.loginId}">사용자 아이디</span> - <span th:text="${comment.timeStamp}">시간</span></div>
+                <p th:text="${comment.content}">댓글 내용</p>
+            </li>
+        </ul>
+    </div>
+    <form action="/comment" th:action="@{|/board/${board.id}|}" method="post">
+        <textarea name="content" placeholder="댓글을 작성하세요..." required></textarea>
+        <input type="hidden" name="boardId" th:value="${board.id}">
+        <input type="hidden" name="loginId" th:value="${session.loginUser.loginId}">
+        <button type="submit">작성</button>
+    </form>
 </main>
 
 <footer>
