--- a/src/main/resources/templates/home/loginHome.html
+++ b/src/main/resources/templates/home/loginHome.html
@@ -28,7 +28,7 @@
 </div>
 
 <header>
-  <div>1일 1알고리즘</div>
+  <div><a href="/" th:href="@{/}">1일 1알고리즘</a></div>
 </header>
 
 <nav>
@@ -45,55 +45,14 @@
 </nav>
 
 <main>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
-  </div>
-  <div class="content">
-    <a href="#" class="content-title">백준 105번</a>
-    <span class="content-user">kjh1234</span>
-    <p class="content-part">DFS / BFS</p>
+  <div class="main-container">
+    <h1 class="main-title">1일 1알고리즘 실천</h1>
+    <p class="main-description">하루에 알고리즘 하나씩!!</p>
+    <div class="challenge-buttons">
+      <a href="https://www.acmicpc.net/" class="challenge-button">백준</a>
+      <a href="https://programmers.co.kr/" class="challenge-button">프로그래머스</a>
+      <a href="https://leetcode.com/problemset/all/" class="challenge-button">LeetCode</a>
+    </div>
   </div>
 </main>
 
