--- a/src/main/resources/static/css/mainpage.css
+++ b/src/main/resources/static/css/mainpage.css
@@ -16,19 +16,16 @@ header {
     z-index: 100;
 }
 
-header a {
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    padding: 0 5px;
-    font-size: 10px;
-}
-
 header {
     color: white;
     font-size: 40px;
     line-height: 100px;
     text-align: center;
+}
+
+header a {
+    color: white;
+    text-decoration: none;
 }
 
 footer {
@@ -228,6 +225,11 @@ nav>div {
         margin-left: 0;
         margin-right: 0;
     }
+
+    .challenge-button {
+        width: 90%;
+        padding: 10px 15px;
+    }
 }
 
 .field-error{
@@ -286,4 +288,105 @@ nav>div {
     font-family: 'Courier New', monospace;
     white-space: pre;
     overflow-x: auto;
+}
+
+/* Comments Section */
+.comments {
+    background-color: #f8f8f8; /* Light background */
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 20px;
+}
+
+.comments h3 {
+    color: #333; /* Dark color for headers */
+    margin-bottom: 10px;
+}
+
+.comments ul {
+    list-style: none;
+    padding: 0;
+}
+
+.comments li {
+    border-bottom: 1px solid #ddd; /* Light separator lines */
+    padding: 10px 0;
+}
+
+.comment-user {
+    font-size: 14px; /* Smaller font for user and timestamp */
+    color: #666;
+}
+
+.comment-content {
+    margin-top: 5px;
+    font-size: 16px; /* Readable font size for content */
+}
+
+/* Comment Form */
+.comment-form {
+    padding: 15px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.comment-form textarea {
+    width: 90%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    font-family: 'Noto Sans KR';
+    resize: vertical;
+}
+
+.comment-form button {
+    background-color: #444;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Jua', sans-serif;
+}
+
+.comment-form button:hover {
+    background-color: #333;
+}
+
+.main-container {
+    text-align: center;
+    padding: 50px;
+}
+
+.main-title {
+    margin-bottom: 20px;
+    font-size: 2em;
+}
+
+.main-description {
+    margin-bottom: 30px;
+    font-style: italic;
+}
+
+.challenge-button {
+    display: block;
+    width: 80%;
+    max-width: 300px;
+    margin: 10px auto;
+    padding: 15px 20px;
+    border: 1px solid #000;
+    background-color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: background-color 0.3s;
+    font-family: 'Noto Sans KR';
+    text-decoration: none;
+    color: black;
+}
+
+.challenge-button:hover {
+    background-color: #f0f0f0;
 }
