회원정보 페이지, 비밀번호 변경 폼 추가, 전체 메뉴바 수정

--- a/src/main/resources/templates/edit/editPasswordForm.html
+++ b/src/main/resources/templates/edit/editPasswordForm.html
@@ -44,19 +44,29 @@
   <a href="#" th:href="@{|/menu/Graph|}">그래프</a>
 </nav>
 
-<main>
-  <div class="content" th:each="board : ${board}">
-    <a href="#" th:href="@{|/board/${board.id}|}" class="content-title" th:text="${board.title}">백준 105번</a>
-    <span class="content-user" th:text="${board.loginId}">kjh1234</span>
-    <div th:text="${board.commentCount}">댓글 수</div>
-    <p class="content-part" th:text="${board.part}">DFS / BFS</p>
-  </div>
+<main style="text-align: center;">
+  <form method="post" name="addForm" action="index.html" th:action="@{|/edit/${session.loginUser.loginId}|}" th:object="${passwordForm}" class="login-box">
+    <p class="login-text">비밀번호 변경</p>
+    <div class="id-box">
+      <div th:if="${#fields.hasGlobalErrors()}" class="global-error">
+        <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">글로벌 오류</p>
+      </div>
+
+      <input type="password" id="password" name="password" placeholder="비밀번호 입력.." th:field="*{password}" class="id-textbox" />
+      <div class="field-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">비밀번호 에러</div>
+
+      <input type="password" id="passwordVerify" name="passwordVerify" placeholder="비밀번호 확인.." th:field="*{passwordVerify}" class="id-textbox" />
+      <div class="field-error" th:if="${#fields.hasErrors('passwordVerify')}" th:errors="*{passwordVerify}">비밀번호 확인 에러</div>
+
+      <input type="submit" value="변경하기" class="submit-box">
+    </div>
+    <a class="edit-box" th:href="@{|/userInfo/${session.loginUser.loginId}|}">취소</a>
+  </form>
 </main>
 
 <footer>
   <div>footer</div>
 </footer>
-
 
 <script>
     document.getElementById('menuButton').onclick = function () {
