--- a/src/main/resources/templates/page/userInfoPage.html
+++ b/src/main/resources/templates/page/userInfoPage.html
@@ -14,13 +14,15 @@
 <body>
 <div id="menuButton" class="menu-button">☰ 메뉴</div>
 <div id="sidebar" class="sidebar">
-    <a href="/login">로그인</a>
+    <div class="user-id" id="userId" th:data-login-id="${session.loginUser.loginId}">
+        <span th:text="${session.loginUser.loginId}">사용자 아이디</span>
+    </div>
     <form action="#" th:action="@{/search}" method="get">
         <input type="text" name="title" placeholder="Search Algorithm.." class="search-box">
     </form>
     <a href="#" th:href="@{/board-form}">글쓰기</a>
     <a href="#" th:href="@{/myPage}">마이페이지</a>
-    <a href="#" th:href="@{/userInfo/0}">회원정보</a>
+    <a href="#" th:href="@{|/userInfo/${session.loginUser.loginId}|}">회원정보</a>
     <a href="#">AI에게 질문</a>
     <a href="#" th:href="@{/logout}">로그아웃</a>
 </div>
@@ -43,23 +45,36 @@
 </nav>
 
 <main style="text-align: center;">
-    <form method="post" name="loginForm" action="index.html" th:action
-          th:object="${loginForm}" class="login-box">
-        <p class="login-text">로그인</p>
-        <div class="id-box">
-            <div th:if="${#fields.hasGlobalErrors()}" class="global-error">
-                <p th:each="err : ${#fields.globalErrors()}" th:text="${err}"></p>
-            </div>
-            <input type="text" name="id" placeholder="ID"
-                   th:field="*{loginId}" class="id-textbox" />
-            <div class="field-error" th:if="${#fields.hasErrors('loginId')}" th:errors="*{loginId}">비어있음</div>
-            <input type="password" name="password" placeholder="PASSWORD"
-                   th:field="*{password}" class="id-textbox" />
-            <div class="field-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">비어있음</div>
-            <input type="submit" value="로그인" class="submit-box">
-        </div>
-    </form>
-    <a href="/add" th:href="@{/add}" class="new-user">회원가입</a>
+    <p class="login-text">회원정보</p>
+    <div class="id-box" th:object="${user}">
+        <table>
+            <tr>
+                <td style="width: 20px;"><label for="loginId">사용자 ID</label></td>
+                <td><input type="text" id="loginId" name="loginId" th:field="*{loginId}" class="userInfo-textbox" readonly/></td>
+            </tr>
+
+            <tr>
+                <td style="width: 20px;"><label for="name">이름</label></td>
+                <td><input type="text" id="name" name="name" th:field="*{name}" class="userInfo-textbox" readonly/></td>
+            </tr>
+
+            <tr>
+                <td style="width: 20px;"><label for="birth">생년월일</label></td>
+                <td><input type="text" id="birth" name="birth" th:field="*{birth}" class="userInfo-textbox" readonly/></td>
+            </tr>
+
+            <tr>
+                <td style="width: 20px;"><label for="phoneNumber">전화번호</label></td>
+                <td><input type="text" id="phoneNumber" name="phoneNumber" th:field="*{phoneNumber}" class="userInfo-textbox" readonly/></td>
+            </tr>
+
+            <tr>
+                <td style="width: 20px;"><label for="email">이메일</label></td>
+                <td><input type="text" id="email" name="email" th:field="*{email}" class="userInfo-textbox" readonly/></td>
+            </tr>
+        </table>
+    </div>
+    <a class="edit-box" th:href="@{/edit}">비밀번호 변경</a>
 </main>
 
 <footer>
