--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -1,94 +1,53 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1일 1알고리즘</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Jua&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/mainpage.css">
-</head>
+<head th:replace="~{duplication :: common-head}"></head>
 
 <body>
-<div id="menuButton" class="menu-button">☰ 메뉴</div>
-<div id="sidebar" class="sidebar">
-    <div class="user-id" id="userId" th:data-login-id="${session.loginUser.loginId}">
-        <span th:text="${session.loginUser.loginId}">사용자 아이디</span>
-    </div>
-    <form action="#" th:action="@{/search}" method="get">
-        <input type="text" name="title" placeholder="Search Algorithm.." class="search-box">
-    </form>
-    <a href="#" th:href="@{/board-form}">글쓰기</a>
-    <a href="#" th:href="@{/myPage}">마이페이지</a>
-    <a href="#" th:href="@{|/userInfo/${session.loginUser.loginId}|}">회원정보</a>
-    <a href="#">AI에게 질문</a>
-    <a href="#" th:href="@{/logout}">로그아웃</a>
-</div>
+    <div th:insert="~{duplication :: sidebar}"></div>
+    <header th:replace="~{duplication :: header}"></header>
+    <nav th:replace="~{duplication :: navigation}"></nav>
 
-<header>
-    <div><a href="/" th:href="@{/}">1일 1알고리즘</a></div>
-</header>
+    <main>
+        <div class="blog-post">
+            <p th:text="${board.title}" style="font-size: 30px">제목</p>
+            <hr>
+            <p th:text="${board.part}">파트</p>
+            <hr>
+            <div id="editable-content" class="editable-content" th:utext="${board.content}">내용</div>
+        </div>
+        <div th:if="${board.loginId == session.loginUser.loginId}">
+            <a href="#" th:href="@{|/board-edit/${board.id}|}" style="color:black">수정</a>
+            <a href="#" th:href="@{|/board-delete/${board.id}|}" style="color:black">삭제</a>
+        </div>
+        <div class="comments" th:if="${comments != null}">
+            <h3>댓글</h3>
+            <ul>
+                <li th:each="comment : ${comments}">
+                    <div class="comment-user">
+                        <span th:text="${comment.loginId}">사용자 아이디</span> -
+                        <span th:text="${comment.timeStamp}">시간</span>
+                    </div>
+                    <p class="comment-content" th:text="${comment.content}">댓글 내용</p>
+                    <div th:if="${comment.loginId == session.loginUser.loginId}">
+                        <a href="#" th:href="@{|/comment/delete/${comment.boardId}/${comment.id}|}" style="color:black">삭제</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="comment-form">
+            <form action="/comment" th:action="@{|/board/${board.id}|}" method="post">
+                <textarea name="content" placeholder="댓글을 작성하세요..." required></textarea>
+                <input type="hidden" name="boardId" th:value="${board.id}">
+                <input type="hidden" name="loginId" th:value="${session.loginUser.loginId}">
+                <button type="submit">작성</button>
+            </form>
+        </div>
+    </main>
 
-<nav>
-    <a href="#" th:href="@{|/menu/Hash|}">해시</a>
-    <a href="#" th:href="@{|/menu/Stack-Queue|}">스택 / 큐</a>
-    <a href="#" th:href="@{|/menu/Heap|}">힙</a>
-    <a href="#" th:href="@{|/menu/Sort|}">정렬</a>
-    <a href="#" th:href="@{|/menu/Exhaustive|}">완전탐색</a>
-    <a href="#" th:href="@{|/menu/Greedy|}">그리디</a>
-    <a href="#" th:href="@{|/menu/Dynamic-Programming|}">동적계획법</a>
-    <a href="#" th:href="@{|/menu/DFS-BFS|}">DFS/BFS</a>
-    <a href="#" th:href="@{|/menu/Binary-Search|}">이분탐색</a>
-    <a href="#" th:href="@{|/menu/Graph|}">그래프</a>
-</nav>
+    <footer th:replace="~{duplication :: footer}"></footer>
 
-<main>
-    <div class="blog-post">
-        <p th:text="${board.title}" style="font-size: 30px">제목</p>
-        <hr>
-        <p th:text="${board.part}">파트</p>
-        <hr>
-        <div id="editable-content" class="editable-content" th:utext="${board.content}">내용</div>
-    </div>
-    <div class="comments" th:if="${comments != null}">
-        <h3>댓글</h3>
-        <ul>
-            <li th:each="comment : ${comments}">
-                <div class="comment-user">
-                    <span th:text="${comment.loginId}">사용자 아이디</span> -
-                    <span th:text="${comment.timeStamp}">시간</span>
-                </div>
-                <p class="comment-content" th:text="${comment.content}">댓글 내용</p>
-            </li>
-        </ul>
-    </div>
-    <div class="comment-form">
-        <form action="/comment" th:action="@{|/board/${board.id}|}" method="post">
-            <textarea name="content" placeholder="댓글을 작성하세요..." required></textarea>
-            <input type="hidden" name="boardId" th:value="${board.id}">
-            <input type="hidden" name="loginId" th:value="${session.loginUser.loginId}">
-            <button type="submit">작성</button>
-        </form>
-    </div>
-</main>
-
-<footer>
-    <div>footer</div>
-</footer>
-
-
-<script>
-    document.getElementById('menuButton').onclick = function () {
-        var sidebar = document.getElementById('sidebar');
-        if (sidebar.style.width === '250px') {
-            sidebar.style.width = '0';
-        } else {
-            sidebar.style.width = '250px';
-        }
-    }
-</script>
+    <script src="../javascript/menubar.js"></script>
 
 </body>
 
