--- a/src/main/resources/templates/page/searchPage.html
+++ b/src/main/resources/templates/page/searchPage.html
@@ -1,73 +1,25 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1일 1알고리즘</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Jua&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/mainpage.css">
-</head>
+<head th:replace="~{duplication :: common-head}"></head>
 
 <body>
-<div id="menuButton" class="menu-button">☰ 메뉴</div>
-<div id="sidebar" class="sidebar">
-  <div class="user-id" id="userId" th:data-login-id="${session.loginUser.loginId}">
-    <span th:text="${session.loginUser.loginId}">사용자 아이디</span>
-  </div>
-  <form action="#" th:action="@{/search}" method="get">
-    <input type="text" name="title" placeholder="Search Algorithm.." class="search-box">
-  </form>
-  <a href="#" th:href="@{/board-form}">글쓰기</a>
-  <a href="#" th:href="@{/myPage}">마이페이지</a>
-  <a href="#" th:href="@{|/userInfo/${session.loginUser.loginId}|}">회원정보</a>
-  <a href="#">AI에게 질문</a>
-  <a href="#" th:href="@{/logout}">로그아웃</a>
-</div>
+  <div th:insert="~{duplication :: sidebar}"></div>
+  <header th:replace="~{duplication :: header}"></header>
+  <nav th:replace="~{duplication :: navigation}"></nav>
 
-<header>
-  <div><a href="/" th:href="@{/}">1일 1알고리즘</a></div>
-</header>
+  <main>
+    <div class="content" th:each="board : ${board}">
+      <a href="#" th:href="@{|/board/${board.id}|}" class="content-title" th:text="${board.title}">백준 105번</a>
+      <span class="content-user" th:text="${board.loginId}">kjh1234</span>
+      <div th:text="${board.commentCount}">댓글 수</div>
+      <p class="content-part" th:text="${board.part}">DFS / BFS</p>
+    </div>
+  </main>
 
-<nav>
-  <a href="#" th:href="@{|/menu/Hash|}">해시</a>
-  <a href="#" th:href="@{|/menu/Stack-Queue|}">스택 / 큐</a>
-  <a href="#" th:href="@{|/menu/Heap|}">힙</a>
-  <a href="#" th:href="@{|/menu/Sort|}">정렬</a>
-  <a href="#" th:href="@{|/menu/Exhaustive|}">완전탐색</a>
-  <a href="#" th:href="@{|/menu/Greedy|}">그리디</a>
-  <a href="#" th:href="@{|/menu/Dynamic-Programming|}">동적계획법</a>
-  <a href="#" th:href="@{|/menu/DFS-BFS|}">DFS/BFS</a>
-  <a href="#" th:href="@{|/menu/Binary-Search|}">이분탐색</a>
-  <a href="#" th:href="@{|/menu/Graph|}">그래프</a>
-</nav>
+  <footer th:replace="~{duplication :: footer}"></footer>
 
-<main>
-  <div class="content" th:each="board : ${board}">
-    <a href="#" th:href="@{|/board/${board.id}|}" class="content-title" th:text="${board.title}">백준 105번</a>
-    <span class="content-user" th:text="${board.loginId}">kjh1234</span>
-    <div th:text="${board.commentCount}">댓글 수</div>
-    <p class="content-part" th:text="${board.part}">DFS / BFS</p>
-  </div>
-</main>
-
-<footer>
-  <div>footer</div>
-</footer>
-
-
-<script>
-    document.getElementById('menuButton').onclick = function () {
-        var sidebar = document.getElementById('sidebar');
-        if (sidebar.style.width === '250px') {
-            sidebar.style.width = '0';
-        } else {
-            sidebar.style.width = '250px';
-        }
-    }
-</script>
+  <script src="../javascript/menubar.js"></script>
 
 </body>
 
